--- a/server/html/index.html
+++ b/server/html/index.html
@@ -10,20 +10,18 @@
 <body style="background-color:#000000">
   <script type="text/x-handlebars">
 		<div class="container">
-		    <nav class="row">
-		        <div class="col-sm-6 col-sm-offset-3">
-		          <ul class="nav nav-tabs nav-justified">
-			        	<li>{{#link-to "index"}}Home{{/link-to}}</li>
-		    	    	<li>{{#link-to "about"}}About{{/link-to}}</li>
-		        	</ul>
-		        </div>
-		    </nav>
-
-				{{outlet}}
-
-		    <footer class="row">
-		        <p><a href="http://www.joshuatuckerpdx.com"><small>joshuatuckerpdx.com</small></a></p>
-		    </footer>
+			<nav class="row">
+				<div class="col-sm-6 col-sm-offset-3">
+					<ul class="nav nav-tabs nav-justified">
+						<li>{{#link-to "index"}}Home{{/link-to}}</li>
+						<li>{{#link-to "about"}}About{{/link-to}}</li>
+					</ul>
+				</div>
+			</nav>
+			{{outlet}}
+			<footer class="row">
+				<p><a href="http://www.joshuatuckerpdx.com"><small>joshuatuckerpdx.com</small></a></p>
+			</footer>
 		</div>
 	</script>
 
@@ -57,7 +55,7 @@
 	<script src="js/libs/ember.min.js"></script>
 	<script src="js/libs/ember-data.js"></script>
 	<script src="js/libs/localstorage_adapter.js"></script>
-	<script src="js/app.js"></script>
+	<script src="js/bundle.js"></script>
 
 </body>
 </html>
